Improve rights scheme of Licenses.Code.PublicMacros #230
* moved LicensesNotificationsUIX to a public space
* modified group check to better handle groups checks done when in a subwiki
* removed default value for notifiedGroups
* added tests